--- a/templates/sm-tour.html
+++ b/templates/sm-tour.html
@@ -26,6 +26,8 @@
 						<li><a href="/gallery">GALERİ</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/hotels">OTELLER</a></li>
+						<li class="topbar-devider"></li>
+						<li><div class="fb-like" data-href="http://www.bright.com" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div></li>
 					</ul>
 				</div>
 				<!-- End Topbar -->
@@ -91,6 +93,10 @@
 
 		<!--=== Content Part ===-->
 		<div class="container content">
+
+			<div class="row " style="text-align:right">
+				<div class="fb-like" data-href="http://www.bright.com" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div>
+			</div>
 			<div class="row blog-page">
 				<div class="popular-tours text-center g-heading-v8 " id="Popular-Tours">
 					<div class="container">
@@ -99,7 +105,7 @@
 				</div>
 			</div>
 
-			<div class="row margin-bottom-20" style="text-align:center">
+			<div class="row" style="text-align:center">
 				<div class="col-md-3 col-md-offset-3 col-sm-6" >
 					<!-- Orange Panel -->
 					<div class="panel panel-orange">
@@ -131,9 +137,18 @@
 				</div>
 			</div>
 
+			<div class="row margin-bottom-20" style="text-align:center">
+				<div class="fb-like" data-href="http://www.bright.com" data-layout="button" data-action="like" data-show-faces="true" data-share="false">
+				</div><a href="https://twitter.com/TwitterDev" class="twitter-follow-button" data-size="small" data-show-screen-name="false" data-show-count="false">Follow @TwitterDev</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+			</div>
 			<div class="row">
 				<!-- Begin Sidebar Menu -->
 				<div class="col-md-2">
+
+					<div class="fb-like" data-href="http://www.bright.com" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div>
+					<a href="https://twitter.com/TwitterDev" class="twitter-follow-button" data-show-count="false">Follow</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 					<ul class="list-group sidebar-nav-v1" id="sidebar-nav">
 						<!-- Bosna tours -->
 						<li class="list-group-item list-toggle">
@@ -164,6 +179,8 @@
 						</li>
 						<!-- End Balkan tours-->
 					</ul>
+
+					<div class="fb-like" data-href="http://www.bright.com" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div>
 
 					<!-- Activities -->
 					<div class="posts margin-bottom-40">
