--- a/templates/albania2-tour.html
+++ b/templates/albania2-tour.html
@@ -302,156 +302,6 @@
 														<p>At Meydan</p>
 													</div>
 												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/bakrbabina.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/bascarsi_sokak.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/bascarsisi.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/gazi_husrev.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/hunkar_camii.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/kale.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/katedral.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/kazancilar_sokagi.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/kovaci_sehitlik.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/koziya_koprusu.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/kutuphane.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/latin_koprusu.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/markale.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/medrese.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/morica_han.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/protestan.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/protestan.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/saat_kulesi.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/sadirvan.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/Sarajevo.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/sarajevo1.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/sebil.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/sevda_cesmesi.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/skakavac.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/titonun_atesi.JPG"%}" alt=""/>
-													<div class="carousel-caption">
-														<p></p>
-													</div>
-												</div>
 											</div>
 
 											<div class="carousel-arrow">
@@ -465,9 +315,8 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>Sabah otelden kahvaltıyı yaptıktan sonra çıkıp, ziyaret edeceğimiz yerler : Başçarşıya Hareket, Vidikovac Tepesinden Panoramik Şehir Manzarası
-Beyaz Tabya Gezisi, Aliya İzzetbegoviç’in Kabri ve Şehitliğin Ziyareti, Başçarşı Esnaf Sebili, Tabakhane Mescidi, Bursa Bezistan Gezisi, Gazi Husrev Bey Camii, Boşnak Köftesi İkramı, Moriça Han’da Lokumlu Boşnak Kahvesi İkramı, Gazi Husrev Beg Medresesi, Sevda Çeşmesi, Gazi Husrev Beg Bezistanı, Savaş Hatırası Kan Çiçekleri, Katolik Katedrali, Markala Pazar Yeri, Tito’nun Sönmeyen Hürriyet Ateşi, Tito Caddesi, Özgürlük Meydanı, Ortodoks Kilisesi, Bakır Baba Camii ve Hacı Muhliç Efendi’nin Kabri, At Meydanı, Hünkâr (Latin) Köprüsü, Fatih Camii, İnat Kuça (İnat Evi), Milli Kütüphane
-Boşnak Böreği İkramı, Otele Dönüş
+								<p>Havaalanında Bright Travel rehberi tarafından karşılama. (Akçahisar ) Kruja  şehir gezisinden önce Sarı Saltuk türbesini ziyaret ediyoruz. Horasan erenlerinden Sarı Saltuğun türbesinin ziyaret ettikten sonra Akçahisar’a giriş. Şehir girişinde İskender Bey heykeli bizi karşılayacak. Akçahisar’da ilk olarak betonların arasında saklanmış gibi duran Osmanlı çarşısında gezinti yapıyoruz. Yol boyunca hediyelik eşya dükkânları ve Osmanlı’dan kalan tek cami olan Arnavut kaldırımlı meşhur Murat Camii, eski kale ve kale hamamı, saat kulesi ve komünizm döneminden kalma müze göreceğimiz noktalardan bazıları olacak. Eski şehir merkezindeki gezintimizden sonra tarihi İşkodra’ya şehrine hareket. İşkodra’da komünizm sonrası Arnavutluk’ta ilk hizmete açılan camii olan Kurşunlu Camiini göreceğiz.
+İşkodra’da nehir kenarında alabalık ikramından sonra üç nehrin beslediği muhteşem İşkodra gölü manzaralı İşkodra kalesinden şehri temaşa ettikten sonra İşkodra’da panoramik şehir turu gerçekleştiriyor ve şehirden ayrılıyoruz. Bir buçuk saatlik bir seyahatin ardından Tiran’a ulaşım. Tiran’da restoranda akşam yemeğinin ardından konaklamamız Tiran’daki otelde.
 </p>
 							</div>
 						</li>
@@ -528,9 +377,7 @@ Boşnak Böreği İkramı, Otele Dönüş
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>Sabah otelden kahvaltıyı yaptıktan sonra çıkıp, ziyaret edeceğimiz yerler : Başçarşıya Hareket, Vidikovac Tepesinden Panoramik Şehir Manzarası
-Beyaz Tabya Gezisi, Aliya İzzetbegoviç’in Kabri ve Şehitliğin Ziyareti, Başçarşı Esnaf Sebili, Tabakhane Mescidi, Bursa Bezistan Gezisi, Gazi Husrev Bey Camii, Boşnak Köftesi İkramı, Moriça Han’da Lokumlu Boşnak Kahvesi İkramı, Gazi Husrev Beg Medresesi, Sevda Çeşmesi, Gazi Husrev Beg Bezistanı, Savaş Hatırası Kan Çiçekleri, Katolik Katedrali, Markala Pazar Yeri, Tito’nun Sönmeyen Hürriyet Ateşi, Tito Caddesi, Özgürlük Meydanı, Ortodoks Kilisesi, Bakır Baba Camii ve Hacı Muhliç Efendi’nin Kabri, At Meydanı, Hünkâr (Latin) Köprüsü, Fatih Camii, İnat Kuça (İnat Evi), Milli Kütüphane
-Boşnak Böreği İkramı, Otele Dönüş
+								<p>Saat sekizdeki kahvaltının ardından dokuzda otelden hareket. İlk olarak 1614’te Süleyman Paşa’nın imar ettiği ve 1920’de Arnavutluk’un başkenti olan Tiran’da panoramik şehir turu yapıyoruz. Şehir turu esnasında Ethem Bey Camii, Tarihi Saat Kulesi, Ulusal Müze, Opera ve Bale Binası, Parlamento ve Başbakanlık Binaları, Cumhurbaşkanlığı Köşkü, Rahibe Teresa Heykeli ve İskender Bey Meydanı göreceğimiz yerlerden bazıları. Tiran şehir turunun ardından Elbasan’a hareket. Elbasan’da şehir tururumuza ilk olarak kahvehane olarak kullanılan eski Türk hamamını görerek başlıyoruz. Hünkâr camii ve saat kulesini gördükten sonra Elbasan’ın Osmanlı sokaklarında gezintiyle gezimizi bitiriyoruz. Tiran’a dönüş ve akşam yemeğinin akabinde Tiran’da konaklama.
 </p>
 							</div>
 						</li>
@@ -553,9 +400,9 @@ Boşnak Böreği İkramı, Otele Dönüş
 							</div>
 							<i class="cbp_tmicon rounded-x hidden-xs"></i>
 							<div class="cbp_tmlabel equal-height-column">
-								<h2>Tiran</h2>
+								<h2>Tiran - Berat</h2>
 								<div class="timeline-heading">
-										<div class="carousel slide carousel-v1" id="list2">
+										<div class="carousel slide carousel-v1" id="list3">
 											<div class="carousel-inner">
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/tunel.JPG"%}" alt=""/>
@@ -578,19 +425,17 @@ Boşnak Böreği İkramı, Otele Dönüş
 											</div>
 
 											<div class="carousel-arrow">
-												<a data-slide="prev" href="#list2" class="left carousel-control">
+												<a data-slide="prev" href="#list3" class="left carousel-control">
 													<i class="fa fa-angle-left"></i>
 												</a>
-												<a data-slide="next" href="#list2" class="right carousel-control">
+												<a data-slide="next" href="#list3" class="right carousel-control">
 													<i class="fa fa-angle-right"></i>
 												</a>
 											</div>
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>Sabah otelden kahvaltıyı yaptıktan sonra çıkıp, ziyaret edeceğimiz yerler : Başçarşıya Hareket, Vidikovac Tepesinden Panoramik Şehir Manzarası
-Beyaz Tabya Gezisi, Aliya İzzetbegoviç’in Kabri ve Şehitliğin Ziyareti, Başçarşı Esnaf Sebili, Tabakhane Mescidi, Bursa Bezistan Gezisi, Gazi Husrev Bey Camii, Boşnak Köftesi İkramı, Moriça Han’da Lokumlu Boşnak Kahvesi İkramı, Gazi Husrev Beg Medresesi, Sevda Çeşmesi, Gazi Husrev Beg Bezistanı, Savaş Hatırası Kan Çiçekleri, Katolik Katedrali, Markala Pazar Yeri, Tito’nun Sönmeyen Hürriyet Ateşi, Tito Caddesi, Özgürlük Meydanı, Ortodoks Kilisesi, Bakır Baba Camii ve Hacı Muhliç Efendi’nin Kabri, At Meydanı, Hünkâr (Latin) Köprüsü, Fatih Camii, İnat Kuça (İnat Evi), Milli Kütüphane
-Boşnak Böreği İkramı, Otele Dönüş
+								<p>Kahvaltımız saat yedide. Otelden hareket saatimiz ise sekiz. Akabinde 2400 yıllık tarihe sahip Osmanlı şehri olan ve günümüzde UNESCO koruması altındaki Berat şehrine hareket. Arnavutluk'un Safranbolusu yerinde olan Berat’ta ilk olarak şehir turu. Şehir turumuzda 1000 pencereli şehir olarak bilinen Berat şehrinde kaleden şehre panoramik bakışın bitimindeSüleyman Paşa Camii, Beyazıt Camii, Hünkar Camii, Ali Paşa konağı medrese ve kütüphanesi, Kale içinde minaresi yıkılmış camii ve taş köprü, ST. Mary manastırı ve kilisesi göreceğimiz ve ziyaret edeceğimiz yerler arasında. Şehir turu sonrası çay ve serbest zamanın ardından Tiran'a dönüş. Tiran'da akşam yemeğinin ardından konaklama için otele geçiş.
 </p>
 							</div>
 						</li>
@@ -607,7 +452,7 @@ Boşnak Böreği İkramı, Otele Dönüş
 							<div class="cbp_tmlabel equal-height-column">
 								<h2>Tiran</h2>
 								<div class="timeline-heading">
-										<div class="carousel slide carousel-v1" id="list2">
+										<div class="carousel slide carousel-v1" id="list4">
 											<div class="carousel-inner">
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo-tour/tunel.JPG"%}" alt=""/>
@@ -630,19 +475,17 @@ Boşnak Böreği İkramı, Otele Dönüş
 											</div>
 
 											<div class="carousel-arrow">
-												<a data-slide="prev" href="#list2" class="left carousel-control">
+												<a data-slide="prev" href="#list4" class="left carousel-control">
 													<i class="fa fa-angle-left"></i>
 												</a>
-												<a data-slide="next" href="#list2" class="right carousel-control">
+												<a data-slide="next" href="#list4" class="right carousel-control">
 													<i class="fa fa-angle-right"></i>
 												</a>
 											</div>
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>Sabah otelden kahvaltıyı yaptıktan sonra çıkıp, ziyaret edeceğimiz yerler : Başçarşıya Hareket, Vidikovac Tepesinden Panoramik Şehir Manzarası
-Beyaz Tabya Gezisi, Aliya İzzetbegoviç’in Kabri ve Şehitliğin Ziyareti, Başçarşı Esnaf Sebili, Tabakhane Mescidi, Bursa Bezistan Gezisi, Gazi Husrev Bey Camii, Boşnak Köftesi İkramı, Moriça Han’da Lokumlu Boşnak Kahvesi İkramı, Gazi Husrev Beg Medresesi, Sevda Çeşmesi, Gazi Husrev Beg Bezistanı, Savaş Hatırası Kan Çiçekleri, Katolik Katedrali, Markala Pazar Yeri, Tito’nun Sönmeyen Hürriyet Ateşi, Tito Caddesi, Özgürlük Meydanı, Ortodoks Kilisesi, Bakır Baba Camii ve Hacı Muhliç Efendi’nin Kabri, At Meydanı, Hünkâr (Latin) Köprüsü, Fatih Camii, İnat Kuça (İnat Evi), Milli Kütüphane
-Boşnak Böreği İkramı, Otele Dönüş
+								<p>Saat sekizdeki kahvaltının ardından dokuzda otelden çıkışları yaparak hareket. Tiran şehir merkezinde sevdiklerinize yapacağınız hediyelik alışverişi için serbest zamanın ardından Havaalanından uğurlama.
 </p>
 							</div>
 						</li>
