--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -8,8 +8,14 @@
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<meta name="description" content="Bosna Hersek ve Balkanlarda eğlenceli bir tatil geçirmek için ulaşacağınız en doğru adres.">
 	<meta name="author" content="">
+	<meta name="title" content="Bright Tour">
+
+	<meta property="og:title" content="Bright Tour" />
+	<meta property="og:image" content="http://bright.tours/static/img/main/sebill.jpg" />
+	<meta property="og:description" content="Bosna Hersek ve Balkanlarda eğlenceli bir tatil geçirmek için ulaşacağınız en doğru adres." />
+	<meta property="og:url" content="http://www.bright.tours">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -61,6 +67,17 @@
 	The data-spy and data-target are part of the built-in Bootstrap scrollspy function.
 -->
 <body class="index-page" data-page="index">
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
 
 {% cms_toolbar %}
 
