--- a/templates/smts-tour.html
+++ b/templates/smts-tour.html
@@ -9,11 +9,13 @@
 		<!--=== Header ===-->
 		<div class="header">
 			<div class="container">
-				<!-- Logo -->
-				<a class="logo" href="/">
-					<img src="{% static "img/logo1-default.png"%}" alt="Logo">
-				</a>
-				<!-- End Logo -->
+				<div class="col-md-4" >
+					<!-- Logo -->
+					<a class="logo" href="/">
+						<img src="{% static "img/bt_logo.jpg"%}" height="60" width="100" alt="Logo">
+					</a>
+					<!-- End Logo -->
+				</div>
 
 				<!-- Topbar -->
 				{% include 'topbar.html' %}
