--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
 				<div class="container">
 					<div class="row">
 						<!-- About -->
-						<div class="col-md-3 md-margin-bottom-40">
+						<div class="col-md-3">
 							<div class="headline"><h2>BRIGHT TOURS</h2></div>
 							<ul class="list-unstyled who margin-bottom-30">
 								<li><i class="fa fa-home"></i><font color="white">Pijacna br. 8, Sarajevo 71000, Bosnia and Herzegovina</font></li>
@@ -23,8 +23,11 @@
 									<a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter">
 												<i class="fa fa-twitter"></i></a>
 								</li>
+								<li>
+									<a href="/"><img id="logo-footer"  src="{% static "img/bt_logo.jpg"%}"  height="80" width="200"  alt=""></a>
+
+								</li>
 							</ul>
-							<a href="/"><img id="logo-footer" class="footer-logo" src="{% static "img/logo2-default.png"%}" alt=""></a>
 						</div><!--/col-md-3-->
 						<!-- End About -->
 
