--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -16,15 +16,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#body">
-
-					<img src="{% static "img/btlogo.png"%}" height="40" width="20" alt="BRIGHT TOURS">
-				</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<div class="menu-container">
+					<a href="#body">
+						<img src="{% static "img/bt_logo.jpg"%}" height="100" width="200" alt="BRIGHT TOURS">
+					</a>
 					<ul class="nav navbar-nav">
 						<li class="page-scroll">
 							<a href="/bosnia-tours"><span data-hover="BOSNA TURLARI">BOSNA TURLARI</span></a>
