--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -127,10 +127,10 @@
 		<div class="ms-slide">
 			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/kotor.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>450€</strong>'den başlayan fiyatlar
+				<strong>50€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				BOSNA-KARADAĞ-KOSOVA-MAKEDONYA
+				GÜNÜ BİRLİK TURLAR
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
