--- a/templates/km-tour.html
+++ b/templates/km-tour.html
@@ -185,7 +185,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'kosmak-day1' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -238,7 +238,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'kosmak-day2' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -285,7 +285,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'kosmak-day3' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -333,7 +333,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'kosmak-day4' %}
 							</div>
 						</li>
 						<li class="equal-height-columns">
@@ -386,7 +386,7 @@
 										</div>
 									</div>
 								<h4>Genel Açıklama</h4>
-								<p>...</p>
+								{% placeholder 'kosmak-day5' %}
 							</div>
 						</li>
 					</ul>
