--- a/templates/tourleftsidebar.html
+++ b/templates/tourleftsidebar.html
@@ -29,6 +29,11 @@
 							</ul>
 						</li>
 						<!-- End Balkan tours-->
+						<!-- Balkan tours -->
+						<li class="list-group-item list-toggle">
+							<a href="/bosnia-tours/dailytours"><b>Günü Birlik Turlar</b></a>
+						</li>
+						<!-- End Balkan tours-->
 					</ul>
 
 					<!-- Activities -->
