--- a/templates/topsocialbar.html
+++ b/templates/topsocialbar.html
@@ -1,5 +1,5 @@
 {% load cms_tags staticfiles%}
-			<div class="row margin-bottom-20" style="text-align:right;vertical-align:top;">
+			<div class=" margin-bottom-20" style="text-align:right;vertical-align:top;">
 				<div class="fb-like" data-href="https://www.facebook.com/Bright-Travel-1629987677029220/" data-layout="button" data-action="like" data-show-faces="true" data-share="false" style="line-height:10px;vertical-align:top;zoom:1;*display:inline"></div>
 				&nbsp
 				<div class="fb-follow" data-href="https://www.facebook.com/Bright-Travel-1629987677029220/" data-layout="button" data-size="small" data-show-faces="true" style="line-height:10px;vertical-align:top;zoom:1;*display:inline"></div>
